--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,25 +98,25 @@
 
 
 
-
+  
+  
    
   <div class="content" role="main">
 
-    <div  *ngFor="let w of weatherOfCities ">
+    <div  *ngFor="let m of messages ">
       <div class="card-container">
 
         <a class="card">
-        <h4><b>{{w.name}} </b></h4>
+        <h4><b>{{m.name}} </b></h4>
           
-        <p>Temperature: {{w.main.temp}}  Weather: {{w.weather[0].main}}</p>
+        <p>Temperature: {{m.main.temp}}  Weather: {{m.weather[0].main}}</p>
         </a>
       </div>
-
         
   </div>
 
     
- 
+    
     
   
 
