--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -99,9 +99,9 @@
 
 
   
-  
+  <div ng-init="always()"> </div>
    
-  <div class="content" role="main">
+  <div class="content" role="main" >
 
     <div  *ngFor="let m of messages ">
       <div class="card-container">
