--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -99,20 +99,21 @@
 
 
   
-  <div ng-init="always()"> </div>
+  
    
   <div class="content" role="main" >
 
     <div  *ngFor="let m of messages ">
-      <div class="card-container">
+      <div *ngIf="m">
+        <div class="card-container">
 
-        <a class="card">
-        <h4><b>{{m.name}} </b></h4>
-          
-        <p>Temperature: {{m.main.temp}}  Weather: {{m.weather[0].main}}</p>
-        </a>
+          <a class="card">
+          <h4><b>{{m.name}} </b></h4>
+            
+          <p>Temperature: {{m.main.temp}}  Weather: {{m.weather[0].main}}</p>
+          </a>
+        </div>
       </div>
-        
   </div>
 
     
